UI design aangemaakt: OceanUI
Een eigen UI style toegevoeged genaamd OceanUI. De verschillende GUI
onderdelen gekoppeld aan de OceanUI style.

--- a/src/com/netgames/clashoffishes/ui/FishPool.fxml
+++ b/src/com/netgames/clashoffishes/ui/FishPool.fxml
@@ -6,8 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="536.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="56.0" layoutY="32.0" text="\$Username's game">
          <font>
