--- a/src/com/netgames/clashoffishes/ui/Highscore.fxml
+++ b/src/com/netgames/clashoffishes/ui/Highscore.fxml
@@ -5,15 +5,14 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="466.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="466.0" prefWidth="372.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="38.0" layoutY="23.0" text="Highscore">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <ComboBox layoutX="38.0" layoutY="76.0" prefHeight="25.0" prefWidth="298.0" promptText="Modus" />
+      <ComboBox layoutX="29.0" layoutY="77.0" prefHeight="25.0" prefWidth="311.0" promptText="Modus" />
       <TableView layoutX="29.0" layoutY="111.0" prefHeight="325.0" prefWidth="311.0">
         <columns>
           <TableColumn prefWidth="160.0" text="Players" />
