--- a/src/com/netgames/clashoffishes/ui/HostedGames.fxml
+++ b/src/com/netgames/clashoffishes/ui/HostedGames.fxml
@@ -5,8 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="530.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="530.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView layoutX="39.0" layoutY="73.0" prefHeight="328.0" prefWidth="458.0">
         <columns>
@@ -20,7 +19,7 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Button layoutX="398.0" layoutY="410.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="82.0" text="Join" />
-      <Button layoutX="421.0" layoutY="14.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="75.0" text="Back" />
+      <Button layoutX="407.0" layoutY="409.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="90.0" text="Join" />
+      <Button layoutX="406.0" layoutY="14.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="90.0" text="Back" />
    </children>
 </AnchorPane>
