--- a/src/com/netgames/clashoffishes/ui/Registration.fxml
+++ b/src/com/netgames/clashoffishes/ui/Registration.fxml
@@ -5,8 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="143.0" layoutY="83.0" text="Registration">
          <font>
@@ -14,7 +13,7 @@
          </font>
       </Label>
       <Label layoutX="82.0" layoutY="157.0" text="Username" />
-      <Label layoutX="100.0" layoutY="274.0" prefHeight="17.0" prefWidth="34.0" text="E-mail" />
+      <Label layoutX="98.0" layoutY="274.0" prefHeight="17.0" prefWidth="41.0" text="E-mail" />
       <Label layoutX="84.0" layoutY="234.0" text="Password" />
       <Label layoutX="84.0" layoutY="192.0" text="Password" />
       <TextField layoutX="151.0" layoutY="153.0" promptText="Username" />
