--- a/src/com/netgames/clashoffishes/ui/StartMenu.fxml
+++ b/src/com/netgames/clashoffishes/ui/StartMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netgames.clashoffishes.ui.StartMenuController">
   <children>
     <Button layoutX="139.0" layoutY="139.0" mnemonicParsing="false" onAction="#hostGame" prefHeight="40.0" prefWidth="323.0" text="Host game" />
     <Button layoutX="139.0" layoutY="193.0" mnemonicParsing="false" onAction="#joinGame" prefHeight="40.0" prefWidth="323.0" text="Join game" />
