--- a/src/com/netgames/clashoffishes/ui/Registration.fxml
+++ b/src/com/netgames/clashoffishes/ui/Registration.fxml
@@ -5,22 +5,22 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="paneMainForm" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netgames.clashoffishes.ui.RegistrationController">
    <children>
-      <Label layoutX="143.0" layoutY="83.0" text="Registration">
+      <Label layoutX="196.0" layoutY="39.0" text="Registration">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="82.0" layoutY="157.0" text="Username" />
-      <Label layoutX="98.0" layoutY="274.0" prefHeight="17.0" prefWidth="41.0" text="E-mail" />
-      <Label layoutX="84.0" layoutY="234.0" text="Password" />
-      <Label layoutX="84.0" layoutY="192.0" text="Password" />
-      <TextField layoutX="151.0" layoutY="153.0" promptText="Username" />
-      <TextField layoutX="151.0" layoutY="188.0" promptText="Password" />
-      <TextField layoutX="151.0" layoutY="230.0" promptText="Password" />
-      <TextField layoutX="151.0" layoutY="270.0" promptText="E-mail" />
-      <Button layoutX="68.0" layoutY="307.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="116.0" text="Register" />
-      <Button layoutX="201.0" layoutY="307.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="116.0" text="Cancel" />
+      <Label layoutX="166.0" layoutY="127.0" text="Username:" />
+      <Label layoutX="166.0" layoutY="226.0" prefHeight="17.0" prefWidth="41.0" text="E-mail:" />
+      <Label layoutX="166.0" layoutY="192.0" text="Confirm password:" />
+      <Label layoutX="166.0" layoutY="160.0" text="Password:" />
+      <TextField fx:id="txtUsername" layoutX="274.0" layoutY="123.0" promptText="Username" />
+      <TextField fx:id="txtPassword" layoutX="274.0" layoutY="156.0" promptText="Password" />
+      <TextField fx:id="txtConfirmPassword" layoutX="274.0" layoutY="189.0" promptText="Confirm password" />
+      <TextField fx:id="txtEmail" layoutX="274.0" layoutY="222.0" promptText="E-mail" />
+      <Button fx:id="btnRegister" layoutX="166.0" layoutY="287.0" mnemonicParsing="false" onAction="#btnRegister_OnClick" prefHeight="39.0" prefWidth="116.0" text="Register" />
+      <Button fx:id="btnCancel" layoutX="307.0" layoutY="287.0" mnemonicParsing="false" onAction="#btnCancel_OnClick" prefHeight="39.0" prefWidth="116.0" text="Cancel" />
    </children>
 </AnchorPane>
