--- a/src/com/netgames/clashoffishes/ui/Login.fxml
+++ b/src/com/netgames/clashoffishes/ui/Login.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netgames.clashoffishes.ui.LoginController">
    <children>
       <Label layoutX="182.0" layoutY="108.0" text="Login">
          <font>
@@ -18,5 +18,6 @@
       <TextField layoutX="269.0" layoutY="220.0" />
       <Button layoutX="183.0" layoutY="256.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="116.0" text="Login" />
       <Button layoutX="302.0" layoutY="256.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="116.0" text="Register" />
+      <Label fx:id="lbl_error" layoutX="269.0" layoutY="156.0" text="Label" />
    </children>
 </AnchorPane>
