--- a/src/com/netgames/clashoffishes/ui/FishPool.fxml
+++ b/src/com/netgames/clashoffishes/ui/FishPool.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.media.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="paneMainForm" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="536.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netgames.clashoffishes.ui.FishPoolController">
+<AnchorPane fx:id="paneMainForm" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="438.0" prefWidth="624.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netgames.clashoffishes.ui.FishPoolController">
    <children>
       <Label fx:id="lblLobbyName" layoutX="56.0" layoutY="32.0" text="\$Username's game">
          <font>
@@ -19,15 +21,25 @@
           <TableColumn fx:id="clmReady" prefWidth="120.0" text="Ready" />
         </columns>
       </TableView>
-      <Label layoutX="377.0" layoutY="133.0" text="GameMode">
+      <Label layoutX="467.0" layoutY="96.0" text="Game mode:">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <RadioButton fx:id="rbLastFishSwimming" layoutX="377.0" layoutY="169.0" mnemonicParsing="false" text="Last Fish Swimming" />
-      <RadioButton fx:id="rbEvolutionOfTime" layoutX="377.0" layoutY="192.0" mnemonicParsing="false" text="Evolution of Time" />
-      <RadioButton fx:id="rbEvolved" layoutX="377.0" layoutY="214.0" mnemonicParsing="false" text="Evolved" />
-      <Button fx:id="btnReady" layoutX="363.0" layoutY="246.0" mnemonicParsing="false" onAction="#btnReady_OnClick" prefHeight="41.0" prefWidth="126.0" text="I'm ready!" />
-      <Button fx:id="btnStartGame" layoutX="363.0" layoutY="295.0" mnemonicParsing="false" onAction="#btnStartGame_OnClick" prefHeight="41.0" prefWidth="126.0" text="Start game!" />
+      <RadioButton fx:id="rbLastFishSwimming" layoutX="467.0" layoutY="132.0" mnemonicParsing="false" text="Last Fish Swimming">
+         <toggleGroup>
+            <ToggleGroup fx:id="gameMode" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="rbEvolutionOfTime" layoutX="467.0" layoutY="155.0" mnemonicParsing="false" text="Evolution of Time" toggleGroup="$gameMode" />
+      <RadioButton fx:id="rbEvolved" layoutX="467.0" layoutY="177.0" mnemonicParsing="false" text="Evolved" toggleGroup="$gameMode" />
+      <Button fx:id="btnReady" layoutX="314.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnReady_OnClick" prefHeight="41.0" prefWidth="126.0" text="I'm ready!" />
+      <Button fx:id="btnStartGame" layoutX="470.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnStartGame_OnClick" prefHeight="41.0" prefWidth="126.0" text="Start game!" />
+      <ImageView fx:id="pictCharacter" fitHeight="126.0" fitWidth="131.0" layoutX="312.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" />
+      <ComboBox fx:id="cbCharacters" layoutX="468.0" layoutY="239.0" onAction="#cbCharacters_OnChanged" prefHeight="25.0" prefWidth="131.0" />
+      <Label fx:id="lblCharacter" layoutX="467.0" layoutY="206.0" text="Character:">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
