--- a/src/com/netgames/clashoffishes/ui/Registration.fxml
+++ b/src/com/netgames/clashoffishes/ui/Registration.fxml
@@ -17,10 +17,11 @@
       <Label layoutX="166.0" layoutY="192.0" text="Confirm password:" />
       <Label layoutX="166.0" layoutY="160.0" text="Password:" />
       <TextField fx:id="txtUsername" layoutX="274.0" layoutY="123.0" promptText="Username" />
-      <TextField fx:id="txtPassword" layoutX="274.0" layoutY="156.0" promptText="Password" />
-      <TextField fx:id="txtConfirmPassword" layoutX="274.0" layoutY="189.0" promptText="Confirm password" />
+      <PasswordField fx:id="txtPassword" layoutX="274.0" layoutY="156.0" promptText="Password" />
+      <PasswordField fx:id="txtConfirmPassword" layoutX="274.0" layoutY="188.0" promptText="Password" />
       <TextField fx:id="txtEmail" layoutX="274.0" layoutY="222.0" promptText="E-mail" />
       <Button fx:id="btnRegister" layoutX="166.0" layoutY="287.0" mnemonicParsing="false" onAction="#btnRegister_OnClick" prefHeight="39.0" prefWidth="116.0" text="Register" />
       <Button fx:id="btnCancel" layoutX="307.0" layoutY="287.0" mnemonicParsing="false" onAction="#btnCancel_OnClick" prefHeight="39.0" prefWidth="116.0" text="Cancel" />
+      <Label fx:id="lbl_error" layoutX="268.0" layoutY="96.0" />
    </children>
 </AnchorPane>
