--- a/clash-of-fishes-server/src/clash/of/fishes/server/ui/LobbyServerGUI.fxml
+++ b/clash-of-fishes-server/src/clash/of/fishes/server/ui/LobbyServerGUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane fx:id="paneMainForm" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="788.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="paneMainForm" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="788.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clash.of.fishes.server.ui.LobbyServerGUIController">
    <children>
       <ListView fx:id="lstViewServers" layoutX="14.0" layoutY="38.0" prefHeight="348.0" prefWidth="352.0" />
       <Label fx:id="lblServers" layoutX="14.0" layoutY="14.0" text="Servers:" />
