--- a/src/com/netgames/clashoffishes/ui/FishPool.fxml
+++ b/src/com/netgames/clashoffishes/ui/FishPool.fxml
@@ -40,7 +40,7 @@
          <children>
             <ListView fx:id="lstViewMessages" layoutX="14.0" layoutY="79.0" prefHeight="283.0" prefWidth="336.0" />
             <Button fx:id="btnSendMessage" layoutX="243.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnSendMessage_OnClick" prefHeight="41.0" prefWidth="107.0" text="Send" />
-            <TextField fx:id="tfMessage" layoutX="14.0" layoutY="378.0" prefHeight="25.0" prefWidth="223.0" />
+            <TextField fx:id="tfMessage" layoutX="14.0" layoutY="378.0" onKeyPressed="#OnEnterClick" prefHeight="25.0" prefWidth="223.0" />
          </children>
       </Pane>
    </children>
