--- a/src/com/netgames/clashoffishes/ui/HostedGames.fxml
+++ b/src/com/netgames/clashoffishes/ui/HostedGames.fxml
@@ -21,6 +21,7 @@
       </Label>
       <Button fx:id="btnJoinGame" layoutX="407.0" layoutY="409.0" mnemonicParsing="false" onAction="#btnJoinGame_OnClick" prefHeight="41.0" prefWidth="90.0" text="Join" />
       <Button fx:id="btnBack" layoutX="406.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnBack_OnClick" prefHeight="41.0" prefWidth="90.0" text="Back" />
+      <Label fx:id="lbl_error" layoutX="148.0" layoutY="421.0" text="Please select a lobby" textFill="#ff0404" visible="false" />
       <Button fx:id="btnRefreshLobbyList" layoutX="285.0" layoutY="409.0" mnemonicParsing="false" onAction="#btnRefreshLobbyList_OnClick" text="Refresh" />
    </children>
 </AnchorPane>
