--- a/src/com/netgames/clashoffishes/ui/FishPool.fxml
+++ b/src/com/netgames/clashoffishes/ui/FishPool.fxml
@@ -43,5 +43,6 @@
             <TextField fx:id="tfMessage" layoutX="14.0" layoutY="378.0" onKeyPressed="#OnEnterClick" prefHeight="25.0" prefWidth="223.0" />
          </children>
       </Pane>
+      <Label fx:id="lbl_error" layoutX="34.0" layoutY="382.0" text="Not everyone has a character selected" visible="false" />
    </children>
 </AnchorPane>
