--- a/src/com/netgames/clashoffishes/ui/FishPool.fxml
+++ b/src/com/netgames/clashoffishes/ui/FishPool.fxml
@@ -9,40 +9,41 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane fx:id="paneMainForm" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="438.0" prefWidth="967.0" styleClass="background-gradient" stylesheets="@OceanUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netgames.clashoffishes.ui.FishPoolController">
-   <children>
-      <Label fx:id="lblLobbyName" layoutX="56.0" layoutY="15.0" text="\$Username's game">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <TableView fx:id="tbvPlayers" layoutX="56.0" layoutY="77.0" prefHeight="283.0" prefWidth="384.0" />
-      <Label layoutX="466.0" layoutY="41.0" text="Game mode:">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <RadioButton fx:id="rbLastFishSwimming" layoutX="466.0" layoutY="77.0" mnemonicParsing="false" text="Last Fish Swimming">
-         <toggleGroup>
-            <ToggleGroup fx:id="gameMode" />
-         </toggleGroup></RadioButton>
-      <RadioButton fx:id="rbEvolutionOfTime" layoutX="466.0" layoutY="100.0" mnemonicParsing="false" text="Evolution of Time" toggleGroup="$gameMode" />
-      <RadioButton fx:id="rbEvolved" layoutX="466.0" layoutY="122.0" mnemonicParsing="false" text="Evolved" toggleGroup="$gameMode" />
-      <Button fx:id="btnReady" layoutX="253.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnReady_OnClick" prefHeight="41.0" prefWidth="187.0" text="I'm ready!" />
-      <Button fx:id="btnStartGame" layoutX="470.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnStartGame_OnClick" prefHeight="41.0" prefWidth="126.0" text="Start game!" />
-      <ImageView fx:id="pictCharacter" fitHeight="126.0" fitWidth="131.0" layoutX="470.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true" />
-      <ComboBox fx:id="cbCharacters" layoutX="467.0" layoutY="184.0" onAction="#cbCharacters_OnChanged" prefHeight="25.0" prefWidth="131.0" />
-      <Label fx:id="lblCharacter" layoutX="466.0" layoutY="151.0" text="Character:">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <Pane layoutX="607.0" prefHeight="438.0" prefWidth="366.0">
-         <children>
-            <ListView fx:id="lstViewMessages" layoutX="14.0" layoutY="79.0" prefHeight="283.0" prefWidth="336.0" />
-            <Button fx:id="btnSendMessage" layoutX="243.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnSendMessage_OnClick" prefHeight="41.0" prefWidth="107.0" text="Send" />
-            <TextField fx:id="tfMessage" layoutX="14.0" layoutY="378.0" onKeyPressed="#OnEnterClick" prefHeight="25.0" prefWidth="223.0" />
-         </children>
-      </Pane>
-      <Label fx:id="lbl_error" layoutX="34.0" layoutY="382.0" text="Not everyone has a character selected" visible="false" />
-   </children>
+    <children>
+        <Label fx:id="lblLobbyName" layoutX="56.0" layoutY="15.0" text="\$Username's game">
+            <font>
+                <Font size="36.0" />
+            </font>
+        </Label>
+        <TableView fx:id="tbvPlayers" layoutX="56.0" layoutY="77.0" prefHeight="283.0" prefWidth="384.0" />
+        <Label layoutX="466.0" layoutY="41.0" text="Game mode:">
+            <font>
+                <Font name="System Bold" size="18.0" />
+            </font>
+        </Label>
+        <RadioButton fx:id="rbLastFishSwimming" layoutX="466.0" layoutY="77.0" mnemonicParsing="false" text="Last Fish Swimming">
+            <toggleGroup>
+                <ToggleGroup fx:id="gameMode" />
+            </toggleGroup>
+        </RadioButton>
+        <RadioButton fx:id="rbEvolutionOfTime" layoutX="466.0" layoutY="100.0" mnemonicParsing="false" text="Evolution of Time" toggleGroup="$gameMode" />
+        <RadioButton fx:id="rbEvolved" layoutX="466.0" layoutY="122.0" mnemonicParsing="false" text="Evolved" toggleGroup="$gameMode" />
+        <Button fx:id="btnReady" layoutX="253.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnReady_OnClick" prefHeight="41.0" prefWidth="187.0" text="I'm ready!" />
+        <Button fx:id="btnStartGame" layoutX="470.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnStartGame_OnClick" prefHeight="41.0" prefWidth="126.0" text="Start game!" />
+        <ImageView fx:id="pictCharacter" fitHeight="126.0" fitWidth="131.0" layoutX="470.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true" />
+        <ComboBox fx:id="cbCharacters" layoutX="467.0" layoutY="184.0" onAction="#cbCharacters_OnChanged" prefHeight="25.0" prefWidth="131.0" />
+        <Label fx:id="lblCharacter" layoutX="466.0" layoutY="151.0" text="Character:">
+            <font>
+                <Font name="System Bold" size="18.0" />
+            </font>
+        </Label>
+        <Pane layoutX="607.0" prefHeight="438.0" prefWidth="366.0">
+            <children>
+                <ListView fx:id="lstViewMessages" layoutX="14.0" layoutY="79.0" prefHeight="283.0" prefWidth="336.0" />
+                <Button fx:id="btnSendMessage" layoutX="243.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnSendMessage_OnClick" prefHeight="41.0" prefWidth="107.0" text="Send" />
+                <TextField fx:id="tfMessage" layoutX="14.0" layoutY="378.0" onKeyPressed="#OnEnterClick" prefHeight="25.0" prefWidth="223.0" />
+            </children>
+        </Pane>
+        <Label fx:id="lbl_error" layoutX="34.0" layoutY="382.0" text="Not everyone has a character selected" visible="false" />
+    </children>
 </AnchorPane>
