--- a/src/com/netgames/clashoffishes/ui/GameWorld.fxml
+++ b/src/com/netgames/clashoffishes/ui/GameWorld.fxml
@@ -5,15 +5,16 @@
 <?import javafx.scene.layout.*?>
 
 <SplitPane dividerPositions="0.8944723618090452" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-         <children>
-            <Label layoutX="14.0" layoutY="11.0" text="Score: " />
-            <Label layoutX="57.0" layoutY="11.0" text="0" />
-            <Label layoutX="201.0" layoutY="11.0" text="Time: " />
-            <Label layoutX="242.0" layoutY="11.0" text="xx:xx" />
-            <Button layoutX="501.0" layoutY="6.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="83.0" text="Quit" />
-         </children></AnchorPane>
-  </items>
+    <items>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+            <children>
+                <Label layoutX="14.0" layoutY="11.0" text="Score: " />
+                <Label layoutX="57.0" layoutY="11.0" text="0" />
+                <Label layoutX="201.0" layoutY="11.0" text="Time: " />
+                <Label layoutX="242.0" layoutY="11.0" text="xx:xx" />
+                <Button layoutX="501.0" layoutY="6.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="83.0" text="Quit" />
+            </children>
+        </AnchorPane>
+    </items>
 </SplitPane>
